# hvg-interface

./: CMakeLists.txt  LICENSE  README.md  README.txt
include/: config.h.in  controller.h  factory.h  gameListController.h  gameListModel.h  infoController.h  infoModel.h  mainController.h  mainDlg.h  mainModel.h  model.h
resources/: gameListView.html  gameListView.js  hvg.qrc  infoView.html  infoView.js  mainView.html  mainView.js  style.css
src/: gameListController.cpp  gameListModel.cpp  infoController.cpp  infoModel.cpp  main.cpp  mainController.cpp  mainDlg.cpp  mainModel.cpp
ui/: hvg_main.ui
